# mgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.sh  imgui.ini  make.sh  msk  run.sh  setup.sh
include/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Shader.cpp  Shader.h
src/lib/Array/: VertexArray.cpp  VertexArray.h
src/lib/Buffer/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/lib/data/Array/: VertexArray.cpp
src/lib/data/Buffer/: IndexBuffer.cpp  VertexBuffer.cpp  VertexBufferLayout.h
src/lib/draw/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/lib/engine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h
src/lib/engine/tests/: ExampleTest.cpp  ExampleTest.h  Test.cpp  Test.h  TestCamera.cpp  TestCamera.h  TestClearColor.cpp  TestClearColor.h  TestMenu.cpp  TestMenu.h  TestTexture2D.cpp  TestTexture2D.h  TestTexture3D.cpp  TestTexture3D.h
src/utils/: FileReader.cpp  FileReader.h  ImGUI.cpp  ImGUI.h  Map.cpp  Map.h  OpenGL.cpp  OpenGL.h  String.cpp  String.h  globals.cpp  globals.h
static/: shader.glsl
static/shaders/: default.fs  default.vs
